k3s/dashy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashy-service
spec:
  selector:
    app: dashy
  ports:
  - protocol: TCP
    port: 80 # Port the route will take (accessible outside)
    targetPort: 8080 # Port inside the pod
