k3s/dashy/dashy-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dashy-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: http
    port: 80
