k3s/dashy/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashy-route
spec:
  parentRefs:
  - name: dashy-gateway
  hostnames:
  - "dashy.homelab.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dashy-service
      port: 80
